--- a/gb/23/11/16/n14118034.md
+++ b/gb/23/11/16/n14118034.md
@@ -9,7 +9,7 @@
 <p>反介入/区域拒止是中共太平洋战略的核心，目的是将可能介入中国近海冲突的外来军事力量阻挡在太平洋深处，而无法影响中共在台海或南海的军事行动。这一战略将随着最新的美国B-21隐身轰炸机的出现而成为一句过时的口号。中共几乎没有任何手段阻挡B-21穿透其现有防空系统，并将致命精确武器送抵任何中共敏感目标。</p>
 <p>去年12月10日，社交媒体上的视频和图片显示，B-21突袭者（Raider）轰炸机从加州帕姆代尔空军42厂起飞，前往爱德华兹空军基地。这次在预期时间表上的成功首飞，标志着新一代隐身技术的历史时刻。</p>
 <p>技术上，人们对这种神秘的新型轰炸机知道的可能并不多，因为很大程度上它仍然是高度机密。但美国空军高级官员和武器开发商将其描述为隐身技术领域的一次改变范式的飞跃。它能够随时随地打击世界上任何危险目标。也就是说在B-21的各种能力中，近乎无懈可击的隐身性能使其穿越防范最严密的防线。人们用“如入无人之境”形容武将勇猛，B-21在穿透当今防空系统的作战中，可以当之无愧。</p>
-<p><a width="560" b="315" loading="lazy" data2-src=""></a><a href="https://d1xqyoddjp48c4.cloudfront.net/H9cSGNDct"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1ga7r03804a6D3b0hfhFPIWHW12n1c" title="(国语) 中共会山寨B-21吗？ 听听我们怎么说｜【#时事军事】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;" allowfullscreen></a></p>
+<p><a width="560" b="315" loading="lazy" data2-src=""></a><a href="https://d1u99il8548gs4.cloudfront.net/E2iSGNDcm"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1ga7r03804a6D3b0hfhFPIWHW12n1c" title="(国语) 中共会山寨B-21吗？ 听听我们怎么说｜【#时事军事】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;" allowfullscreen></a></p>
 <p>隐身性能是轰炸机能够突破敌人防线的关键能力。今天的防空系统正在变得越来越复杂，有人说，它们能够追踪和攻击隐身战斗机。例如，俄罗斯媒体声称，其S-500防空系统就能够做到这一点。但是，俄罗斯人所说的这种能力似乎很难验证。</p>
 <p>理论上，监视雷达的低频波束可以检测到某种物体的存在，即监视或发现隐身飞机。但是低频雷达不能用于与目标交战，瞄准和锁定移动目标并最终摧毁目标，还需要高频雷达来完成。二者在技术性能和作战使用上存在着巨大差异。实际建立对隐身目标的杀伤链，并不是一件容易的事。</p>
 <p>B-21的设计目标就是躲避监视雷达和交战雷达，从而穿越防线，用精确制导导弹瞄准并攻击防御严密的高价值目标。就算敌人知道它的存在，也无能为力，这就是宽频隐身的前提。</p>
@@ -30,16 +30,16 @@
 <p>这不是说中共改掉了剽窃的毛病，它仍在利用一切手段窃取西方先进技术，只是内容、方法发生了变化。比如在设计思想上抄袭美国的F-22，开发歼-20。据说，已经难产多年的轰-20也和美国即将退役的B-2轰炸机外观上非常相似。也许，美国乐于观看中共复制美国飞机的做法，因为如果没有技术实力，这将是消耗巨大资源的黑洞。</p>
 <p><span style="color: #808000;">撰文：夏洛山（《大纪元时报》记者，曾经历过十几年的军队生活，主要从事军队的教学和一些技术管理工作）</span><br />
 <span style="color: #808000;"> 制作：时事军事制作组</span><br />
-<span style="color: #808000;"> 关注《时事军事-夏洛山》：<a style="color: #808000;" href=""></a><a href="https://d1xqyoddjp48c4.cloudfront.net/H9cSGNDct"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjing.com/zh-TW/channel/1f6pro4fi585ppZp9ySKkwd0W19f0c">"></a><a href="https://d1xqyoddjp48c4.cloudfront.net/H9cSGNDct"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjing.com/zh-TW/channel/1f6pro4fi585ppZp9ySKkwd0W19f0c</a></span></p>
-<p><a title="YouTube video player" loading="lazy" data2-src=""></a><a href="https://d1xqyoddjp48c4.cloudfront.net/H9cSGNDct"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/AqoQ5zZk9W8" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<span style="color: #808000;"> 关注《时事军事-夏洛山》：<a style="color: #808000;" href=""></a><a href="https://d1u99il8548gs4.cloudfront.net/E2iSGNDcm"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjing.com/zh-TW/channel/1f6pro4fi585ppZp9ySKkwd0W19f0c">"></a><a href="https://d1u99il8548gs4.cloudfront.net/E2iSGNDcm"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjing.com/zh-TW/channel/1f6pro4fi585ppZp9ySKkwd0W19f0c</a></span></p>
+<p><a title="YouTube video player" loading="lazy" data2-src=""></a><a href="https://d1u99il8548gs4.cloudfront.net/E2iSGNDcm"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/AqoQ5zZk9W8" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <p>责任编辑：连书华</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/27/n10515765.md#1" target="_blank">孙盛起：自己选择的路，只好用上吊绳走完</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/4/n10688678.md#1" target="_blank">摆脱人生困境 美国女子重拾幸福</a></li><hr>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772976.md#1" target="_blank">林辉：中共当年盘剥延安人 被骂很“黑”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/18/n11461393.md#1" target="_blank">“中共是所有人噩梦”美智库主席吁解体中共</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
